infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # Enable TLS so you can access https://ticketing.local and set Secure cookies
  tls:
    - hosts:
        - ticketing.local
      secretName: ticketing-local-tls # Create this TLS secret in the same namespace
  ingressClassName: nginx
  rules:
  - host: ticketing.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-svc
            port:
              number: 3000
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: auth-svc
            port:
              number: 3000
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: product-svc
            port:
              number: 3000
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: order-svc
            port:
              number: 3000
